--- a/weechat/weechat/plugins.conf
+++ b/weechat/weechat/plugins.conf
@@ -78,6 +78,7 @@ python.spell_correction.hide_single_dict = "on"
 python.spell_correction.replace_mode = "off"
 python.spell_correction.suggest_item = "${white}%S${default}"
 python.text_item.active_buffer_number = "all|buffer_switch ${color:014}${buffer.number}"
+python.text_item.interval = "0"
 ruby.check_license = "off"
 tcl.check_license = "off"
 weenick.server_default.nickserv_failed = "access denied"
@@ -95,6 +96,7 @@ python.spell_correction.eat_input_char = "will eat the next char you type, after
 python.spell_correction.hide_single_dict = "will hide dict in item if you have a single dict for buffer only (default: "on")"
 python.spell_correction.replace_mode = "misspelled word will be replaced directly by suggestions. Use option 'complete_near' to specify range and item 'spell_suggest' to show possible suggestions. (default: "off")"
 python.spell_correction.suggest_item = "item format (%S = suggestion, %D = dict). Colors are allowed with format "${color}". note: since WeeChat 0.4.2 content is evaluated, see /help eval. (default: "${white}%S${default}")"
+python.text_item.interval = "How often (in seconds) to force an update of all items. 0 means deactivated"
 weenick.server_default.command = "command(s) to get processed upon identification"
 weenick.server_default.nick = "registered nickname"
 weenick.server_default.nickserv_failed = "string to identify notice that password is wrong"
