--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -327,34 +327,6 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
-newsbar.color_bg = default
-newsbar.color_delim = default
-newsbar.color_fg = default
-newsbar.conditions = ""
-newsbar.filling_left_right = vertical
-newsbar.filling_top_bottom = vertical
-newsbar.hidden = on
-newsbar.items = "newsbar"
-newsbar.position = top
-newsbar.priority = 1000
-newsbar.separator = on
-newsbar.size = 0
-newsbar.size_max = 4
-newsbar.type = root
-newsbar_title.color_bg = 25
-newsbar_title.color_delim = default
-newsbar_title.color_fg = default
-newsbar_title.conditions = ""
-newsbar_title.filling_left_right = vertical
-newsbar_title.filling_top_bottom = vertical
-newsbar_title.hidden = on
-newsbar_title.items = "newsbar_title"
-newsbar_title.position = top
-newsbar_title.priority = 1010
-newsbar_title.separator = off
-newsbar_title.size = 0
-newsbar_title.size_max = 1
-newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -456,6 +428,8 @@ ctrl-Y = "/input clipboard_paste"
 meta-ctrl-M = "/newsbar clear"
 meta-meta-OP = "/bar scroll buflist * b"
 meta-meta-OQ = "/bar scroll buflist * e"
+meta-meta2-11~ = "/bar scroll buflist * b"
+meta-meta2-12~ = "/bar scroll buflist * e"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -489,6 +463,10 @@ meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
 meta-Od = "/input move_previous_word"
 meta-Z = "/window bare"
+meta2-11^ = "/bar scroll buflist * -100%"
+meta2-11~ = "/bar scroll buflist * -100%"
+meta2-12^ = "/bar scroll buflist * +100%"
+meta2-12~ = "/bar scroll buflist * +100%"
 meta2-15~ = "/buffer -1"
 meta2-17~ = "/buffer +1"
 meta2-18~ = "/window -1"
@@ -499,10 +477,14 @@ meta2-1;3C = "/buffer +1"
 meta2-1;3D = "/buffer -1"
 meta2-1;3F = "/window scroll_bottom"
 meta2-1;3H = "/window scroll_top"
+meta2-1;3P = "/bar scroll buflist * b"
+meta2-1;3Q = "/bar scroll buflist * e"
 meta2-1;5A = "/input history_global_previous"
 meta2-1;5B = "/input history_global_next"
 meta2-1;5C = "/input move_next_word"
 meta2-1;5D = "/input move_previous_word"
+meta2-1;5P = "/bar scroll buflist * -100%"
+meta2-1;5Q = "/bar scroll buflist * +100%"
 meta2-1~ = "/input move_beginning_of_line"
 meta2-200~ = "/input paste_start"
 meta2-201~ = "/input paste_stop"
