compton: change legacy options

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -50,7 +50,7 @@ unredir-if-possible = true;
 # GLX backend
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
-glx-swap-method = "buffer-age";
+use-damage = true;
 
 # Window type settings
 wintypes:
