--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,27 +15,18 @@ bind l select-pane -R
 #### COLOUR (Solarized dark) ####
 
 # default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
-
+set-option -g status-style "fg=yellow,bg=black"
 # default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
+set-option -g window-style "fg=brightblue,bg=default"
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-option -g window-status-current-style "fg=brightred,bg=default"
 
 # pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+set-option -g pane-border-style "fg=black"
+set-option -g pane-active-border-style "fg=brightgreen"
 
 # message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message-style "fg=brightred,bg=black"
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
