--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 # Fix weird characters in weechat and others
+set -g default-terminal "screen-256color"
 set -sa terminal-overrides ',alacritty*:RGB,xterm*:RGB,tmux*:RGB'
 
 set-option -g status on
