alacritty: deprecated options

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -44,7 +44,7 @@ window:
   decorations: none
 
   # When true, alacritty starts maximized.
-  start_maximized: false
+  startup_mode: Windowed
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
