weechat: update config

--- a/weechat/weechat/irc.conf
+++ b/weechat/weechat/irc.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- irc.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [look]
 buffer_open_before_autojoin = on
@@ -27,7 +34,6 @@ highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
-item_away_message = on
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
@@ -36,9 +42,6 @@ join_auto_add_chantype = off
 msgbuffer_fallback = current
 new_channel_position = none
 new_pv_position = none
-nick_color_force = ""
-nick_color_hash = sum
-nick_color_stop_chars = "_|["
 nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
@@ -54,7 +57,8 @@ pv_tags = "notify_private"
 raw_messages = 256
 server_buffer = independent
 smart_filter = on
-smart_filter_delay = 5
+smart_filter_chghost = on
+smart_filter_delay = 10
 smart_filter_join = on
 smart_filter_join_unmask = 30
 smart_filter_mode = "ovh"
@@ -65,25 +69,26 @@ topic_strip_colors = off
 
 [color]
 input_nick = lightcyan
-item_away = /default
 item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
 item_nick_modes = default
+message_chghost = brown
 message_join = green
 message_quit = red
 mirc_remap = "1,-1:darkgray"
 nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
 reason_quit = default
+topic_current = default
 topic_new = white
 topic_old = default
 
 [network]
-alternate_nick = on
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 1800
 ban_mask_default = "*!$user@$host"
+channel_encode = off
 colors_receive = on
 colors_send = on
 lag_check = 60
@@ -93,6 +98,7 @@ lag_reconnect = 0
 lag_refresh_interval = 1
 notify_check_ison = 1
 notify_check_whois = 5
+sasl_fail_unavailable = on
 send_unknown_commands = off
 whois_double_nick = on
 
@@ -101,6 +107,7 @@ whois_double_nick = on
 [ctcp]
 
 [ignore]
+ignore = znc-whatcd;*;^.*status$
 
 [server_default]
 addresses = ""
@@ -118,12 +125,13 @@ capabilities = ""
 command = ""
 command_delay = 0
 connection_timeout = 60
-default_msg_kick = ""
-default_msg_part = "WeeChat %v"
-default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
+msg_kick = ""
+msg_part = "WeeChat ${info:version}"
+msg_quit = "WeeChat ${info:version}"
 nicks = "anthony,anthony1,anthony2,anthony3,anthony4"
+nicks_alternate = on
 notify = ""
 password = ""
 proxy = ""
@@ -134,12 +142,14 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
+split_msg_max_length = 512
 ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
 ssl_priorities = "NORMAL"
 ssl_verify = off
+usermode = ""
 username = "anthony"
 
 [server]
@@ -164,9 +174,11 @@ freenode.autoconnect
 freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks
+freenode.nicks_alternate
 freenode.username
 freenode.realname
 freenode.local_hostname
+freenode.usermode
 freenode.command
 freenode.command_delay
 freenode.autojoin
@@ -177,11 +189,12 @@ freenode.anti_flood_prio_high
 freenode.anti_flood_prio_low
 freenode.away_check
 freenode.away_check_max_nicks
-freenode.default_msg_kick
-freenode.default_msg_part
-freenode.default_msg_quit
+freenode.msg_kick
+freenode.msg_part
+freenode.msg_quit
 freenode.notify
-znc-aruhier.addresses = "vm-irc-0/8766"
+freenode.split_msg_max_length
+znc-aruhier.addresses = "znc.aruhier.fr/8766"
 znc-aruhier.proxy
 znc-aruhier.ipv6
 znc-aruhier.ssl = on
@@ -202,9 +215,11 @@ znc-aruhier.autoconnect = on
 znc-aruhier.autoreconnect
 znc-aruhier.autoreconnect_delay
 znc-aruhier.nicks = "anthony/RPi-aruhier"
+znc-aruhier.nicks_alternate
 znc-aruhier.username = "anthony/RPi-aruhier"
 znc-aruhier.realname
 znc-aruhier.local_hostname
+znc-aruhier.usermode
 znc-aruhier.command
 znc-aruhier.command_delay
 znc-aruhier.autojoin
@@ -215,11 +230,12 @@ znc-aruhier.anti_flood_prio_high
 znc-aruhier.anti_flood_prio_low
 znc-aruhier.away_check
 znc-aruhier.away_check_max_nicks
-znc-aruhier.default_msg_kick
-znc-aruhier.default_msg_part
-znc-aruhier.default_msg_quit
+znc-aruhier.msg_kick
+znc-aruhier.msg_part
+znc-aruhier.msg_quit
 znc-aruhier.notify
-znc-freenode.addresses = "vm-irc-0/8766"
+znc-aruhier.split_msg_max_length
+znc-freenode.addresses = "znc.aruhier.fr/8766"
 znc-freenode.proxy
 znc-freenode.ipv6
 znc-freenode.ssl = on
@@ -240,9 +256,11 @@ znc-freenode.autoconnect = on
 znc-freenode.autoreconnect
 znc-freenode.autoreconnect_delay
 znc-freenode.nicks = "anthony/Freenode"
+znc-freenode.nicks_alternate
 znc-freenode.username = "anthony/Freenode"
 znc-freenode.realname
 znc-freenode.local_hostname
+znc-freenode.usermode
 znc-freenode.command
 znc-freenode.command_delay
 znc-freenode.autojoin
@@ -253,11 +271,12 @@ znc-freenode.anti_flood_prio_high
 znc-freenode.anti_flood_prio_low
 znc-freenode.away_check
 znc-freenode.away_check_max_nicks
-znc-freenode.default_msg_kick
-znc-freenode.default_msg_part
-znc-freenode.default_msg_quit
+znc-freenode.msg_kick
+znc-freenode.msg_part
+znc-freenode.msg_quit
 znc-freenode.notify
-znc-rezosup.addresses = "vm-irc-0/8766"
+znc-freenode.split_msg_max_length
+znc-rezosup.addresses = "znc.aruhier.fr/8766"
 znc-rezosup.proxy
 znc-rezosup.ipv6
 znc-rezosup.ssl = on
@@ -278,9 +297,11 @@ znc-rezosup.autoconnect = on
 znc-rezosup.autoreconnect
 znc-rezosup.autoreconnect_delay
 znc-rezosup.nicks = "anthony"
+znc-rezosup.nicks_alternate
 znc-rezosup.username = "anthony/Rezosup"
 znc-rezosup.realname
 znc-rezosup.local_hostname
+znc-rezosup.usermode
 znc-rezosup.command
 znc-rezosup.command_delay
 znc-rezosup.autojoin
@@ -291,10 +312,11 @@ znc-rezosup.anti_flood_prio_high
 znc-rezosup.anti_flood_prio_low
 znc-rezosup.away_check
 znc-rezosup.away_check_max_nicks
-znc-rezosup.default_msg_kick
-znc-rezosup.default_msg_part
-znc-rezosup.default_msg_quit
+znc-rezosup.msg_kick
+znc-rezosup.msg_part
+znc-rezosup.msg_quit
 znc-rezosup.notify
+znc-rezosup.split_msg_max_length
 rezosup.addresses = "irc.rezosup.org"
 rezosup.proxy
 rezosup.ipv6
@@ -316,9 +338,11 @@ rezosup.autoconnect
 rezosup.autoreconnect
 rezosup.autoreconnect_delay
 rezosup.nicks
+rezosup.nicks_alternate
 rezosup.username
 rezosup.realname
 rezosup.local_hostname
+rezosup.usermode
 rezosup.command
 rezosup.command_delay
 rezosup.autojoin
@@ -329,11 +353,12 @@ rezosup.anti_flood_prio_high
 rezosup.anti_flood_prio_low
 rezosup.away_check
 rezosup.away_check_max_nicks
-rezosup.default_msg_kick
-rezosup.default_msg_part
-rezosup.default_msg_quit
+rezosup.msg_kick
+rezosup.msg_part
+rezosup.msg_quit
 rezosup.notify
-znc-bitlbee.addresses = "irc.aruhier.fr/8766"
+rezosup.split_msg_max_length
+znc-bitlbee.addresses = "znc.aruhier.fr/8766"
 znc-bitlbee.proxy
 znc-bitlbee.ipv6
 znc-bitlbee.ssl = on
@@ -354,9 +379,11 @@ znc-bitlbee.autoconnect = on
 znc-bitlbee.autoreconnect = on
 znc-bitlbee.autoreconnect_delay
 znc-bitlbee.nicks = "anthony"
+znc-bitlbee.nicks_alternate
 znc-bitlbee.username = "anthony/Bitlbee"
 znc-bitlbee.realname
 znc-bitlbee.local_hostname
+znc-bitlbee.usermode
 znc-bitlbee.command
 znc-bitlbee.command_delay
 znc-bitlbee.autojoin
@@ -367,10 +394,11 @@ znc-bitlbee.anti_flood_prio_high
 znc-bitlbee.anti_flood_prio_low
 znc-bitlbee.away_check
 znc-bitlbee.away_check_max_nicks
-znc-bitlbee.default_msg_kick
-znc-bitlbee.default_msg_part
-znc-bitlbee.default_msg_quit
+znc-bitlbee.msg_kick
+znc-bitlbee.msg_part
+znc-bitlbee.msg_quit
 znc-bitlbee.notify
+znc-bitlbee.split_msg_max_length
 znc-oftc.addresses = "znc.aruhier.fr/8766"
 znc-oftc.proxy
 znc-oftc.ipv6
@@ -391,10 +419,12 @@ znc-oftc.sasl_fail
 znc-oftc.autoconnect = on
 znc-oftc.autoreconnect
 znc-oftc.autoreconnect_delay
-znc-oftc.nicks = "anthony/Freenode"
+znc-oftc.nicks = "anthony/OFTC"
+znc-oftc.nicks_alternate
 znc-oftc.username = "anthony/OFTC"
 znc-oftc.realname
 znc-oftc.local_hostname
+znc-oftc.usermode
 znc-oftc.command
 znc-oftc.command_delay
 znc-oftc.autojoin
@@ -405,7 +435,131 @@ znc-oftc.anti_flood_prio_high
 znc-oftc.anti_flood_prio_low
 znc-oftc.away_check
 znc-oftc.away_check_max_nicks
-znc-oftc.default_msg_kick
-znc-oftc.default_msg_part
-znc-oftc.default_msg_quit
+znc-oftc.msg_kick
+znc-oftc.msg_part
+znc-oftc.msg_quit
 znc-oftc.notify
+znc-oftc.split_msg_max_length
+znc-opentrackers.addresses = "znc.aruhier.fr/8766"
+znc-opentrackers.proxy
+znc-opentrackers.ipv6
+znc-opentrackers.ssl = on
+znc-opentrackers.ssl_cert
+znc-opentrackers.ssl_priorities
+znc-opentrackers.ssl_dhkey_size
+znc-opentrackers.ssl_fingerprint
+znc-opentrackers.ssl_verify = off
+znc-opentrackers.password = "${sec.data.znc_account}"
+znc-opentrackers.capabilities
+znc-opentrackers.sasl_mechanism
+znc-opentrackers.sasl_username
+znc-opentrackers.sasl_password
+znc-opentrackers.sasl_key
+znc-opentrackers.sasl_timeout
+znc-opentrackers.sasl_fail
+znc-opentrackers.autoconnect = on
+znc-opentrackers.autoreconnect
+znc-opentrackers.autoreconnect_delay
+znc-opentrackers.nicks = "anthony/OpenTrackers"
+znc-opentrackers.nicks_alternate
+znc-opentrackers.username = "anthony/OpenTrackers"
+znc-opentrackers.realname
+znc-opentrackers.local_hostname
+znc-opentrackers.usermode
+znc-opentrackers.command
+znc-opentrackers.command_delay
+znc-opentrackers.autojoin
+znc-opentrackers.autorejoin
+znc-opentrackers.autorejoin_delay
+znc-opentrackers.connection_timeout
+znc-opentrackers.anti_flood_prio_high
+znc-opentrackers.anti_flood_prio_low
+znc-opentrackers.away_check
+znc-opentrackers.away_check_max_nicks
+znc-opentrackers.msg_kick
+znc-opentrackers.msg_part
+znc-opentrackers.msg_quit
+znc-opentrackers.notify
+znc-opentrackers.split_msg_max_length
+znc-redacted.addresses = "znc.aruhier.fr/8766"
+znc-redacted.proxy
+znc-redacted.ipv6
+znc-redacted.ssl = on
+znc-redacted.ssl_cert
+znc-redacted.ssl_priorities
+znc-redacted.ssl_dhkey_size
+znc-redacted.ssl_fingerprint
+znc-redacted.ssl_verify = off
+znc-redacted.password = "${sec.data.znc_account}"
+znc-redacted.capabilities
+znc-redacted.sasl_mechanism
+znc-redacted.sasl_username
+znc-redacted.sasl_password
+znc-redacted.sasl_key
+znc-redacted.sasl_timeout
+znc-redacted.sasl_fail
+znc-redacted.autoconnect = on
+znc-redacted.autoreconnect
+znc-redacted.autoreconnect_delay
+znc-redacted.nicks = "anthony/Pretome"
+znc-redacted.nicks_alternate
+znc-redacted.username = "anthony/Redacted"
+znc-redacted.realname
+znc-redacted.local_hostname
+znc-redacted.usermode
+znc-redacted.command
+znc-redacted.command_delay
+znc-redacted.autojoin
+znc-redacted.autorejoin
+znc-redacted.autorejoin_delay
+znc-redacted.connection_timeout
+znc-redacted.anti_flood_prio_high
+znc-redacted.anti_flood_prio_low
+znc-redacted.away_check
+znc-redacted.away_check_max_nicks
+znc-redacted.msg_kick
+znc-redacted.msg_part
+znc-redacted.msg_quit
+znc-redacted.notify
+znc-redacted.split_msg_max_length
+znc-online.addresses = "znc.aruhier.fr/8766"
+znc-online.proxy
+znc-online.ipv6
+znc-online.ssl = on
+znc-online.ssl_cert
+znc-online.ssl_priorities
+znc-online.ssl_dhkey_size
+znc-online.ssl_fingerprint
+znc-online.ssl_verify = off
+znc-online.password = "${sec.data.znc_account}"
+znc-online.capabilities
+znc-online.sasl_mechanism
+znc-online.sasl_username
+znc-online.sasl_password
+znc-online.sasl_key
+znc-online.sasl_timeout
+znc-online.sasl_fail
+znc-online.autoconnect = on
+znc-online.autoreconnect
+znc-online.autoreconnect_delay
+znc-online.nicks = "anthony/Online"
+znc-online.nicks_alternate
+znc-online.username = "anthony/Online"
+znc-online.realname
+znc-online.local_hostname
+znc-online.usermode
+znc-online.command
+znc-online.command_delay
+znc-online.autojoin
+znc-online.autorejoin
+znc-online.autorejoin_delay
+znc-online.connection_timeout
+znc-online.anti_flood_prio_high
+znc-online.anti_flood_prio_low
+znc-online.away_check
+znc-online.away_check_max_nicks
+znc-online.msg_kick
+znc-online.msg_part
+znc-online.msg_quit
+znc-online.notify
+znc-online.split_msg_max_length
