weechat: add smart filter for #gogoles

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -424,6 +424,7 @@ irc_smart_znc-whatcd_#french = on;irc.znc-whatcd.#french;irc_smart_filter;*
 irc_smart_znc-mozilla = on;irc.znc-mozilla.*;irc_smart_filter;*
 irc_smart_znc-oftc_#ck = on;irc.znc-oftc.#ck;irc_smart_filter;*
 irc_smart_znc-oftc_#virt = on;irc.znc-oftc.#virt;irc_smart_filter;*
+irc_smart_znc-bitlbee_#gogoles@servo.tf = on;irc.znc-bitlbee.#gogoles@servo.tf;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
