--- a/nvim/install.conf
+++ b/nvim/install.conf
@@ -1,2 +1,3 @@
 "init.vim": "~/.config/nvim/init.vim"
+"coc-settings.json": "~/.config/nvim/coc-settings.vim"
 "plugged/plug.vim": "~/.vim/autoload/plug.vim"
