--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -17,6 +17,14 @@ active-opacity = 1.0;
 inactive-opacity = 1.0;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
+blur:
+{
+  method = "none"
+  # Enable when on glx. Too slow for xrender for now (14.07.2019)
+  # method = "gaussian";
+  # size = 10;
+  # deviation = 5.0;
+};
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
@@ -32,7 +40,7 @@ fade-out-step = 0.13;
 fade-exclude = [ ];
 
 # Other
-backend = "glx"
+backend = "xrender"
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 use-ewmh-active-win = true;
