--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -40,14 +40,14 @@ fade-out-step = 0.13;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender"
+backend = "glx"
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = true;
+vsync = false;
 dbe = false;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
