nvim: force tab frop when jumping def with COC

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
     "coc.preferences.hoverTarget": "echo", // Until neovim implements float previews in stable
+    "coc.preferences.jumpCommand": "tab drop",
     "suggest.echodocSupport": true,
     "suggest.enablePreview": true,
     "diagnostic.displayByAle": true,
