nvim: switch to the release of CoC

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -47,7 +47,8 @@ use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = true;
+# Disable vsync for now, as broken
+vsync = false;
 dbe = false;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
