New screen LG 27GL850-B
Enjoy the recalibration to recalibrate all the screens, with absolute
Gamma 2.2 and CCSS for each screen

--- a/bspwm/install.conf
+++ b/bspwm/install.conf
@@ -3,3 +3,4 @@
 "lg_ips236.icc": "~/.config/bspwm/lg_ips236.icc"
 "hyundai_hdw220d.icc": "~/.config/bspwm/hyundai_hdw220d.icc"
 "dell_u2715h.icc": "~/.config/bspwm/dell_u2715h.icc"
+"lg_27gl850.icm": "~/.config/bspwm/lg_27gl850.icm"
