tmux: add binding to open a new tab in pwd

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind C new-window -c "#{pane_current_path}"
 
 #### COLOUR (Solarized dark) ####
 
