--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -19,15 +19,16 @@ frame-opacity = 1.0;
 inactive-opacity-override = false;
 blur:
 {
-  method = "none"
+  # method = "none"
   # Enable when on glx. Too slow for xrender for now (14.07.2019)
-  # method = "gaussian";
-  # size = 10;
-  # deviation = 5.0;
+  method = "gaussian";
+  size = 3;
+  deviation = 3;
 };
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
+	"class_g = 'Bspwm' && class_i = 'presel_feedback'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 opacity-rule = [ "40:class_g = 'Bspwm' && class_i = 'presel_feedback'" ];
@@ -40,16 +41,15 @@ fade-out-step = 0.13;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender"
+backend = "glx"
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
+refresh-rate = 144;
 # Disable vsync for now, as broken
 vsync = false;
-dbe = false;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
@@ -59,6 +59,7 @@ unredir-if-possible = true;
 # GLX backend
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
+glx-swap-method = 1;
 use-damage = true;
 
 # Window type settings
