tmux: set window-size to smallest

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,8 @@ set-option -g status on
 
 set-window-option -g xterm-keys on
 
+set -g window-size "smallest"
+
 #### Rebind ####
 
 bind h select-pane -L
