--- a/gtk/gtk3-settings.ini
+++ b/gtk/gtk3-settings.ini
@@ -2,7 +2,7 @@
 gtk-application-prefer-dark-theme=0
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Numix-Circle
-gtk-font-name=Arimo 11
+gtk-font-name=Cantarell 11
 gtk-cursor-theme-name=Adwaita
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
