--- a/nvim/install.conf
+++ b/nvim/install.conf
@@ -1,3 +1,3 @@
 "init.vim": "~/.config/nvim/init.vim"
 "coc-settings.json": "~/.config/nvim/coc-settings.json"
-"plugged/plug.vim": "~/.vim/autoload/plug.vim"
+"plugged/plug.vim": "~/.local/share/nvim/site/autoload/plug.vim"
