desktop: update weechat

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -72,6 +72,7 @@ hotlist_short_names = on
 hotlist_sort = group_time_asc
 hotlist_suffix = ""
 hotlist_unique_numbers = on
+hotlist_update_on_buffer_switch = on
 input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
@@ -90,6 +91,7 @@ mouse = off
 mouse_timer_delay = 100
 nick_color_force = ""
 nick_color_hash = djb2
+nick_color_hash_salt = ""
 nick_color_stop_chars = "_|["
 nick_prefix = ""
 nick_suffix = ""
@@ -120,6 +122,7 @@ quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
 read_marker_string = "─"
+read_marker_update_on_buffer_switch = on
 save_config_on_exit = on
 save_config_with_fsync = off
 save_layout_on_exit = none
@@ -246,6 +249,7 @@ save_config_on_unload = on
 
 [bar]
 activestatus.color_bg = 25
+activestatus.color_bg_inactive = default
 activestatus.color_delim = cyan
 activestatus.color_fg = white
 activestatus.conditions = "${active}"
@@ -260,6 +264,7 @@ activestatus.size = 1
 activestatus.size_max = 0
 activestatus.type = window
 buffers.color_bg = default
+buffers.color_bg_inactive = default
 buffers.color_delim = default
 buffers.color_fg = default
 buffers.conditions = ""
@@ -274,6 +279,7 @@ buffers.size = 0
 buffers.size_max = 20
 buffers.type = root
 buflist.color_bg = default
+buflist.color_bg_inactive = default
 buflist.color_delim = default
 buflist.color_fg = default
 buflist.conditions = ""
@@ -288,6 +294,7 @@ buflist.size = 0
 buflist.size_max = 0
 buflist.type = root
 fset.color_bg = default
+fset.color_bg_inactive = default
 fset.color_delim = cyan
 fset.color_fg = default
 fset.conditions = "${buffer.full_name} == fset.fset"
@@ -302,6 +309,7 @@ fset.size = 3
 fset.size_max = 3
 fset.type = window
 input.color_bg = default
+input.color_bg_inactive = default
 input.color_delim = default
 input.color_fg = default
 input.conditions = "${active}"
@@ -316,6 +324,7 @@ input.size = 1
 input.size_max = 0
 input.type = window
 isetbar.color_bg = default
+isetbar.color_bg_inactive = default
 isetbar.color_delim = cyan
 isetbar.color_fg = default
 isetbar.conditions = ""
@@ -330,6 +339,7 @@ isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
 nicklist.color_bg = default
+nicklist.color_bg_inactive = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
@@ -344,6 +354,7 @@ nicklist.size = 0
 nicklist.size_max = 17
 nicklist.type = root
 rootglobalstatus.color_bg = default
+rootglobalstatus.color_bg_inactive = default
 rootglobalstatus.color_delim = cyan
 rootglobalstatus.color_fg = default
 rootglobalstatus.conditions = ""
@@ -358,6 +369,7 @@ rootglobalstatus.size = 0
 rootglobalstatus.size_max = 0
 rootglobalstatus.type = root
 status.color_bg = black
+status.color_bg_inactive = default
 status.color_delim = cyan
 status.color_fg = white
 status.conditions = "${inactive}"
@@ -372,6 +384,7 @@ status.size = 1
 status.size_max = 0
 status.type = window
 title.color_bg = 25
+title.color_bg_inactive = default
 title.color_delim = cyan
 title.color_fg = 250
 title.conditions = "${active}"
@@ -452,6 +465,7 @@ meta-< = "/input jump_previously_visited_buffer"
 meta-= = "/filter toggle"
 meta-> = "/input jump_next_visited_buffer"
 meta-A = "/newsbar toggle"
+meta-B = "/buflist toggle"
 meta-K = "/input grab_key_command"
 meta-OA = "/input history_global_previous"
 meta-OB = "/input history_global_next"
