Weechat: update autosort rules

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -338,6 +338,36 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
+newsbar.color_bg = default
+newsbar.color_bg_inactive = default
+newsbar.color_delim = default
+newsbar.color_fg = default
+newsbar.conditions = ""
+newsbar.filling_left_right = vertical
+newsbar.filling_top_bottom = vertical
+newsbar.hidden = on
+newsbar.items = "newsbar"
+newsbar.position = top
+newsbar.priority = 1000
+newsbar.separator = on
+newsbar.size = 0
+newsbar.size_max = 4
+newsbar.type = root
+newsbar_title.color_bg = 25
+newsbar_title.color_bg_inactive = 25
+newsbar_title.color_delim = default
+newsbar_title.color_fg = default
+newsbar_title.conditions = ""
+newsbar_title.filling_left_right = vertical
+newsbar_title.filling_top_bottom = vertical
+newsbar_title.hidden = on
+newsbar_title.items = "newsbar_title"
+newsbar_title.position = top
+newsbar_title.priority = 1010
+newsbar_title.separator = off
+newsbar_title.size = 0
+newsbar_title.size_max = 1
+newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_bg_inactive = default
 nicklist.color_delim = cyan
@@ -400,6 +430,55 @@ title.size_max = 0
 title.type = window
 
 [layout]
+default.buffer = "core;weechat;1"
+default.buffer = "relay;relay.list;2"
+default.buffer = "irc;server.znc-aruhier;3"
+default.buffer = "irc;znc-aruhier.#paume;4"
+default.buffer = "irc;server.znc-bitlbee;5"
+default.buffer = "irc;znc-bitlbee.anthony_z3c;6"
+default.buffer = "irc;znc-bitlbee.EmmanuelCaille;7"
+default.buffer = "irc;znc-bitlbee.LouisFeuvrier;8"
+default.buffer = "irc;znc-bitlbee.TaoSauvage;9"
+default.buffer = "irc;znc-bitlbee.TimotheeDzik;10"
+default.buffer = "irc;znc-bitlbee.&aruhier.fr;11"
+default.buffer = "irc;znc-bitlbee.&bitlbee;12"
+default.buffer = "irc;znc-bitlbee.&hangouts;13"
+default.buffer = "irc;znc-bitlbee.&servo.tf;14"
+default.buffer = "irc;znc-bitlbee.&telegram-tdlib;15"
+default.buffer = "irc;znc-bitlbee.#gogoles@servo.tf;16"
+default.buffer = "irc;znc-bitlbee.#Juleshaag;17"
+default.buffer = "irc;server.znc-rezosup;18"
+default.buffer = "irc;znc-rezosup.#lolut;19"
+default.buffer = "irc;znc-rezosup.#utbm;20"
+default.buffer = "irc;server.znc-freenode;21"
+default.buffer = "irc;znc-freenode.##glalol;22"
+default.buffer = "irc;znc-freenode.#neron;23"
+default.buffer = "irc;znc-freenode.#glanet;24"
+default.buffer = "irc;znc-freenode.#ampache;25"
+default.buffer = "irc;znc-freenode.#archlinux;26"
+default.buffer = "irc;znc-freenode.#btrbk;27"
+default.buffer = "irc;znc-freenode.#btrfs;28"
+default.buffer = "irc;znc-freenode.#gentoo;29"
+default.buffer = "irc;znc-freenode.#lxc;30"
+default.buffer = "irc;znc-freenode.#river;31"
+default.buffer = "irc;znc-freenode.#sphinx-doc;32"
+default.buffer = "irc;znc-freenode.#sway;33"
+default.buffer = "irc;server.znc-oftc;34"
+default.buffer = "irc;znc-oftc.#qtile;35"
+default.buffer = "irc;znc-oftc.#virt;36"
+default.buffer = "irc;server.znc-online;37"
+default.buffer = "irc;znc-online.#network;38"
+default.buffer = "irc;znc-online.#online;39"
+default.buffer = "irc;server.znc-opentrackers;40"
+default.buffer = "irc;znc-opentrackers.*status;41"
+default.buffer = "irc;server.znc-redacted;42"
+default.buffer = "irc;znc-redacted.#redacted;43"
+default.window = "1;0;50;0;-;-"
+default.window = "2;1;50;1;-;-"
+default.window = "3;2;0;0;irc;znc-freenode.#neron"
+default.window = "4;2;0;0;core;weechat"
+default.window = "5;1;0;0;irc;znc-freenode.#river"
+default.current = on
 
 [notify]
 
@@ -412,6 +491,9 @@ irc_smart_znc-mozilla = on;irc.znc-mozilla.*;irc_smart_filter;*
 irc_smart_znc-oftc_#ck = on;irc.znc-oftc.#ck;irc_smart_filter;*
 irc_smart_znc-oftc_#virt = on;irc.znc-oftc.#virt;irc_smart_filter;*
 irc_smart_znc-bitlbee_#gogoles@servo.tf = on;irc.znc-bitlbee.#gogoles@servo.tf;irc_smart_filter;*
+irc_smart_znc-oftc = on;irc.znc-oftc.*;irc_smart_filter;*
+irc_smart_znc-online_#online = on;irc.znc-online.#online;irc_smart_filter;*
+irc_smart_znc-libera = on;irc.znc-libera.*;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
