--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -22,9 +22,9 @@
 
 # Uncomment the following option to get rid of the copyright notice
 
+keyserver https://keys.openpgp.org
 keyserver hkp://keys.gnupg.net
 keyserver http://pgp.mit.edu
-keyserver hkps://hkps.pool.sks-keyservers.net
 
 use-agent
 pinentry-mode loopback
