--- a/nvim/install.conf
+++ b/nvim/install.conf
@@ -1,2 +1,3 @@
 "init.vim": "~/.config/nvim/init.vim"
+"plugged/plug.vim": "~/.local/share/nvim/site/autoload/plug.vim"
 "plugged/plug.vim": "~/.vim/autoload/plug.vim"
