weechat: refresh config files

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -4,7 +4,7 @@
 # WARNING: It is NOT recommended to edit this file by hand,
 # especially if WeeChat is running.
 #
-# Use /set or similar command to change settings in WeeChat.
+# Use commands like /set or /fset to change settings in WeeChat.
 #
 # For more info, see: https://weechat.org/doc/quickstart
 #
@@ -236,7 +236,8 @@ max_visited_buffers = 50
 
 [network]
 connection_timeout = 60
-gnutls_ca_file = "/etc/ssl/certs/ca-certificates.crt"
+gnutls_ca_system = on
+gnutls_ca_user = ""
 gnutls_handshake_timeout = 30
 proxy_curl = ""
 
@@ -246,6 +247,13 @@ debug = off
 extension = ".so,.dll"
 path = "%h/plugins"
 save_config_on_unload = on
+
+[signal]
+sighup = "${if:${info:weechat_headless}?/reload:/quit -yes}"
+sigquit = "/quit -yes"
+sigterm = "/quit -yes"
+sigusr1 = ""
+sigusr2 = ""
 
 [bar]
 activestatus.color_bg = 25
@@ -345,7 +353,7 @@ newsbar.color_fg = default
 newsbar.conditions = ""
 newsbar.filling_left_right = vertical
 newsbar.filling_top_bottom = vertical
-newsbar.hidden = on
+newsbar.hidden = off
 newsbar.items = "newsbar"
 newsbar.position = top
 newsbar.priority = 1000
@@ -360,7 +368,7 @@ newsbar_title.color_fg = default
 newsbar_title.conditions = ""
 newsbar_title.filling_left_right = vertical
 newsbar_title.filling_top_bottom = vertical
-newsbar_title.hidden = on
+newsbar_title.hidden = off
 newsbar_title.items = "newsbar_title"
 newsbar_title.position = top
 newsbar_title.priority = 1010
@@ -759,12 +767,14 @@ ctrl-_ = "/input undo"
 
 [key_search]
 ctrl-I = "/input search_switch_where"
-ctrl-J = "/input search_stop"
-ctrl-M = "/input search_stop"
+ctrl-J = "/input search_stop_here"
+ctrl-M = "/input search_stop_here"
+ctrl-Q = "/input search_stop"
 ctrl-R = "/input search_switch_regex"
 meta2-A = "/input search_previous"
 meta2-B = "/input search_next"
 meta-c = "/input search_switch_case"
+enter = "/input search_stop_here"
 
 [key_cursor]
 ctrl-J = "/cursor stop"
