--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,8 @@ bind C new-window -c "#{pane_current_path}"
 
 # default statusbar colors
 set-option -g status-style "fg=yellow,bg=black"
+# active window title colors
+set-option -g window-status-current-style "fg=brightred,bg=default"
 
 # pane border
 set-option -g pane-border-style "fg=black"
