weechat: switch to everforest

--- a/weechat/install.conf
+++ b/weechat/install.conf
@@ -1,6 +1,7 @@
 "weechat/alias.conf": "~/.weechat/alias.conf"
 "weechat/autosort.conf": "~/.weechat/autosort.conf"
 "weechat/buflist.conf": "~/.weechat/buflist.conf"
+"weechat/fset.conf": "~/.weechat/fset.conf"
 "weechat/otr.conf": "~/.weechat/otr.conf"
 "weechat/plugins.conf": "~/.weechat/plugins.conf"
 "weechat/urlgrab.conf": "~/.weechat/urlgrab.conf"
