--- a/weechat/weechat/buflist.conf
+++ b/weechat/weechat/buflist.conf
@@ -25,17 +25,17 @@ use_items = 1
 
 [format]
 buffer = "${format_number}${indent}${nick_prefix}${color_hotlist}${name}"
-buffer_current = "${color:253,25}${color:253}${number}${if:${number_displayed}?.: }${indent}${color:253}${nick_prefix}${color:253}${name}"
+buffer_current = "${color:253,239}${color:253}${number}${if:${number_displayed}?.: }${indent}${color:253}${nick_prefix}${color:253}${name}"
 hotlist = " ${color:magenta, default}(${hotlist}${color:green})"
-hotlist_highlight = "${color:magenta}"
-hotlist_low = "${color:white}"
-hotlist_message = "${color:7,default}"
+hotlist_highlight = "${color:red}"
+hotlist_low = "${color:green}"
+hotlist_message = "${color:149}"
 hotlist_none = "${color:default}"
-hotlist_private = "${color:white}"
+hotlist_private = "${color:149}"
 hotlist_separator = "${color:default},"
 indent = "  "
 lag = " ${color:green}[${color:brown}${lag}${color:green}]"
 name = "${name}"
 nick_prefix = "${color_nick_prefix}${nick_prefix}"
-number = "${color:lightgreen}${number}${if:${number_displayed}?.: }"
+number = "${color:green}${number}${if:${number_displayed}?.: }"
 tls_version = " ${color:default}(${if:${tls_version}==TLS1.3?${color:green}:${if:${tls_version}==TLS1.2?${color:yellow}:${color:red}}}${translate:${tls_version}}${color:default})"
