--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -256,10 +256,10 @@ sigusr1 = ""
 sigusr2 = ""
 
 [bar]
-activestatus.color_bg = 25
+activestatus.color_bg = 239
 activestatus.color_bg_inactive = default
 activestatus.color_delim = cyan
-activestatus.color_fg = white
+activestatus.color_fg = 11
 activestatus.conditions = "${active}"
 activestatus.filling_left_right = vertical
 activestatus.filling_top_bottom = horizontal
@@ -353,7 +353,7 @@ newsbar.color_fg = default
 newsbar.conditions = ""
 newsbar.filling_left_right = vertical
 newsbar.filling_top_bottom = vertical
-newsbar.hidden = off
+newsbar.hidden = on
 newsbar.items = "newsbar"
 newsbar.position = top
 newsbar.priority = 1000
@@ -361,14 +361,14 @@ newsbar.separator = on
 newsbar.size = 0
 newsbar.size_max = 4
 newsbar.type = root
-newsbar_title.color_bg = 25
-newsbar_title.color_bg_inactive = 25
+newsbar_title.color_bg = 239
+newsbar_title.color_bg_inactive = 239
 newsbar_title.color_delim = default
 newsbar_title.color_fg = default
 newsbar_title.conditions = ""
 newsbar_title.filling_left_right = vertical
 newsbar_title.filling_top_bottom = vertical
-newsbar_title.hidden = off
+newsbar_title.hidden = on
 newsbar_title.items = "newsbar_title"
 newsbar_title.position = top
 newsbar_title.priority = 1010
@@ -409,7 +409,7 @@ rootglobalstatus.type = root
 status.color_bg = black
 status.color_bg_inactive = default
 status.color_delim = cyan
-status.color_fg = white
+status.color_fg = 11
 status.conditions = "${inactive}"
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
@@ -421,10 +421,10 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = 25
+title.color_bg = 239
 title.color_bg_inactive = default
 title.color_delim = cyan
-title.color_fg = 250
+title.color_fg = 11
 title.conditions = "${active}"
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
