nvim: move config to lua

--- a/nvim/install.conf
+++ b/nvim/install.conf
@@ -1,4 +1,1 @@
-"init.vim": "~/.config/nvim/init.vim"
-"coc-settings.json": "~/.config/nvim/coc-settings.json"
-"plugged/plug.vim": "~/.local/share/nvim/site/autoload/plug.vim"
-"plugged/plug.vim": "~/.vim/autoload/plug.vim"
+"init.lua": "~/.config/nvim/init.lua"
