Alacritty: sync with tower and laptop configs

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -46,6 +46,8 @@ window:
   # When true, alacritty starts maximized.
   startup_mode: Windowed
 
+  opacity: 1.0
+
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
