--- a/sway/config
+++ b/sway/config
@@ -47,6 +47,7 @@ output * bg ~/.config/sway/wallpaper fill
 
 exec swayidle -w \
     timeout 300 'swaymsg "output * dpms off"' \
+    timeout 305  '~/.config/sway/lock.sh' \
     resume 'swaymsg "output * dpms on"' \
     idlehint 303 \
     lock '~/.config/sway/lock.sh' \
