--- a/sway/config
+++ b/sway/config
@@ -46,10 +46,9 @@ mouse_warping none
 output * bg ~/.config/sway/wallpaper fill
 
 exec swayidle -w \
-    timeout 300 'swaymsg "output * dpms off"' \
-    timeout 305  '~/.config/sway/lock.sh' \
+    timeout 300  '~/.config/sway/lock.sh' \
     resume 'swaymsg "output * dpms on"' \
-    idlehint 303 \
+    after-resume 'swaymsg "output * dpms on"' \
     lock '~/.config/sway/lock.sh' \
     before-sleep '~/.config/sway/lock.sh'
 
