--- a/swaync/install.conf
+++ b/swaync/install.conf
@@ -1,1 +1,3 @@
+"config.json": "~/.config/swaync/config.json"
+"configSchema.json": "~/.config/swaync/configSchema.json"
 "style.css": "~/.config/swaync/style.css"
