--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -6,7 +6,7 @@
 #
 # Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart
+# For more info, see: https://weechat.org/doc/quickstart/
 #
 
 [debug]
@@ -243,7 +243,6 @@ proxy_curl = ""
 
 [plugin]
 autoload = "*"
-debug = off
 extension = ".so,.dll"
 path = "%h/plugins"
 save_config_on_unload = on
@@ -346,36 +345,6 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
-newsbar.color_bg = default
-newsbar.color_bg_inactive = default
-newsbar.color_delim = default
-newsbar.color_fg = default
-newsbar.conditions = ""
-newsbar.filling_left_right = vertical
-newsbar.filling_top_bottom = vertical
-newsbar.hidden = on
-newsbar.items = "newsbar"
-newsbar.position = top
-newsbar.priority = 1000
-newsbar.separator = on
-newsbar.size = 0
-newsbar.size_max = 4
-newsbar.type = root
-newsbar_title.color_bg = 239
-newsbar_title.color_bg_inactive = 239
-newsbar_title.color_delim = default
-newsbar_title.color_fg = default
-newsbar_title.conditions = ""
-newsbar_title.filling_left_right = vertical
-newsbar_title.filling_top_bottom = vertical
-newsbar_title.hidden = on
-newsbar_title.items = "newsbar_title"
-newsbar_title.position = top
-newsbar_title.priority = 1010
-newsbar_title.separator = off
-newsbar_title.size = 0
-newsbar_title.size_max = 1
-newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_bg_inactive = default
 nicklist.color_delim = cyan
@@ -398,7 +367,7 @@ rootglobalstatus.color_fg = default
 rootglobalstatus.conditions = ""
 rootglobalstatus.filling_left_right = vertical
 rootglobalstatus.filling_top_bottom = horizontal
-rootglobalstatus.hidden = off
+rootglobalstatus.hidden = on
 rootglobalstatus.items = "buffer_name,[lag],completion,[aspell_dict+: aspell_suggest+]"
 rootglobalstatus.position = bottom
 rootglobalstatus.priority = 90
@@ -436,6 +405,8 @@ title.separator = off
 title.size = 1
 title.size_max = 0
 title.type = window
+
+[custom_bar_item]
 
 [layout]
 default.buffer = "core;weechat;1"
