Remove redshift, move to gammastep

--- a/gammastep/config.ini
+++ b/gammastep/config.ini
@@ -1,15 +1,9 @@
-; Global settings for redshift
-[redshift]
+[general]
 ; Set the day and night screen temperatures
 temp-day=6500
-temp-night=4000
+temp-night=3500
 
 ; Enable/Disable a smooth transition between day and night
 ; 0 will cause a direct change from day to night screen temperature.
 ; 1 will gradually increase or decrease the screen temperature
 transition=1
-
-preserve=1
-
-[randr]
-preserve=1
